# testbot

./: CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  README.md  fly.toml
migrations/2024_03_21_000001_create_interaction_tables/: down.sql  up.sql
migrations/2025-05-05-195558_create_command_history/: down.sql  up.sql
migrations/2025-05-05-204020_add_command_stats/: down.sql  up.sql
src/: db.rs  interactions.rs  lib.rs  main.rs  metrics.rs  models.rs  schema.rs  utils.rs
src/commands/: advice.rs  ball.rs  botsnack.rs  desc.rs  drink.rs  food.rs  github.rs  mod.rs  owner.rs  pingpong.rs  random.rs  stats.rs  stonks.rs
src/utils/: command.rs  guild.rs  metrics.rs  mod.rs  system.rs  time.rs
