[package]
name = "testbot"
version = "0.1.0"
authors = ["Travis Carr <tmcarr@tmcarr.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/tmcarr/testbot"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# env_logger = "0.9.0"
log = "0.4.27"
rand = "0.9.1"
# migrant_lib = "0.33.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
dotenvy = "0.15.7"
poise = "0.6.1"
plotters = "0.3.7"
image = "0.25.6"
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
prometheus = "0.14.0"
lazy_static = "1.5.0"
sysinfo = "0.35.0"
tower = "0.5"
http-body = "1.0"
tower-http = { version = "0.6", features = ["trace"] }
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.2"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "collector",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "unstable_discord_api"
]
version = "0.12.4"

[dev-dependencies]
mockall = "0.12.1"
