[package]
name = "testbot"
version = "0.1.0"
authors = ["Travis Carr <tmcarr@tmcarr.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/tmcarr/testbot"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# env_logger = "0.9.0"
log = "0.4.27"
rand = "0.8.5"
# migrant_lib = "0.33.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["std", "env-filter"] }
dotenvy = "0.15.7"
poise = "0.6.1"
plotters = { version = "0.3.7", default-features = false, features = ["svg_backend", "line_series"] }
image = { version = "0.25.6", default-features = false, features = ["png", "jpeg", "gif"] }
axum = "0.7.4"
chrono = { version = "0.4", features = ["serde"] }
prometheus = { version = "0.14.0", default-features = false }
lazy_static = "1.5.0"
sysinfo = { version = "0.35.0", features = ["serde"] }
tower = "0.5"
http-body = "1.0"
tower-http = { version = "0.6", features = ["trace"] }
diesel = { version = "2.2", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.2"
mockall = "0.12.1"

[dependencies.serenity]
version = "0.12.4"
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "collector",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "unstable_discord_api"
]

[dev-dependencies]
mockall = "0.12.1"
